--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>Casinal</title>
-      <meta name="keywords" content="">
-      <meta name="description" content="">
+      <title>ITVHN Giáo dục</title>
+      <meta name="keywords" content="ITVHN Giáo dục">
+      <meta name="description" content="ITVHN Giáo dục">
       <meta name="author" content="">
       <!-- owl carousel style -->
       <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.0.0-beta.2.4/assets/owl.carousel.min.css" />
@@ -39,7 +39,7 @@
          <div class="header_bg">
             <div class="container">
                <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                  <a class="logo" href="index.html"><img src="images/logo.png"></a>
+                  <a class="logo" href="index.html"><img src="images/log.png"></a>
                   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                   </button>
@@ -83,7 +83,7 @@
                      <div class="banner_taital_main">
                         <div class="row">
                            <div class="col-md-6">
-                              <h1 class="banner_taital">Casinal Educations Coachings</h1>
+                              <h1 class="banner_taital">ITVHN Educations Coachings</h1>
                               <p class="banner_text">Eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
                               <div class="btn_main">
                                  <div class="about_bt active"><a href="#">About Us</a></div>
@@ -121,7 +121,7 @@
                      <div class="banner_taital_main">
                         <div class="row">
                            <div class="col-md-6">
-                              <h1 class="banner_taital">Casinal Educations Coachings</h1>
+                              <h1 class="banner_taital">ITVHN Educations Coachings</h1>
                               <p class="banner_text">Eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
                               <div class="btn_main">
                                  <div class="about_bt active"><a href="#">About Us</a></div>
