--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                      <div class="banner_taital_main">
                         <div class="row">
                            <div class="col-md-6">
-                              <h1 class="banner_taital">Casinal Educations Coachings</h1>
+                              <h1 class="banner_taital">ITVHN Educations Coachings</h1>
                               <p class="banner_text">Eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
                               <div class="btn_main">
                                  <div class="about_bt active"><a href="#">About Us</a></div>
