--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                   </div>
                   <div class="col-lg-3">
                      <div class="information_main">
-                        <div class="footer_logo"><a href="index.html"><img src="images/footer-logo.png"></a></div>
+                        <div class="footer_logo"><a href="index.html"><img src="images/foot-logo.png"></a></div>
                      </div>
                   </div>
                </div>
